--- a/src/style.css
+++ b/src/style.css
@@ -335,10 +335,89 @@ form button[type="submit"]:hover {
 .sec-info-det h4{
     font-family: 'Glacial Indifference';
     font-size: 25px;
-    font-family: 600;
+    font-weight: 600;
 }
 .sec-info-det a{
     font-family: 'Muli';
     color: #fff;
     text-decoration: none;
+}
+
+/* Service Grid Section */
+
+.services{
+    max-width: 1920px;
+    width: 100%;
+    margin: 80px auto;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+
+}
+.serv-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    max-width: 1640px;
+    margin: 0 auto;
+    color: #222222;
+}
+.service-item {
+    background-color: #fafafa;
+    border-radius: 5px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    max-width: 285px;
+    min-height: 360px;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    padding: 20px;
+}
+.service-item h3 {
+    font-family: 'Glacial Indifference';
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #222;
+}
+.icon{
+    width: 50px;
+    height: 50px;
+    margin: 20px auto;
+
+}
+.card-inner {
+    max-width: 285px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.card-back{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-family: 'Muli';
+    font-size: 14px;
+    font-weight: 300;
+    padding: 20px;
+    transform: rotateY(180deg)
+
+}
+.service-item:hover{
+    background-color: #15263E;
+    transform: rotateY(180deg);
+
+}
+.service-item:hover .card-back {
+    display: flex;
+}
+.service-item:hover .card-front {
+    display: none;
 }
