--- a/src/style.css
+++ b/src/style.css
@@ -199,58 +199,58 @@ a {
 }
 
 .modal-content {
-  background: #fff;
-  padding: 20px 30px;
-  border-radius: 10px;
-  text-align: left;
-  position: relative;
-  width: 350px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.25);
+    background: #fff;
+    padding: 20px 30px;
+    border-radius: 10px;
+    text-align: left;
+    position: relative;
+    width: 350px;
+    box-shadow: 0 10px 20px #00000040;
 }
 
 .close-btn {
-  position: absolute;
-  right: 15px;
-  top: 10px;
-  font-size: 24px;
-  cursor: pointer;
-  color: #888;
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #888;
 }
 
 
 #hireMeBtn:hover {
-  background-color: #005f73;
+    background-color: #005f73;
 }
 
 input, textarea {
-  width: 100%;
-  padding: 8px;
-  font-size: 14px;
-  margin-top: 4px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 8px;
+    font-size: 14px;
+    margin-top: 4px;
+    box-sizing: border-box;
 }
 
 form button[type="submit"] {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #28a745;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 6px;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 6px;
 }
 
 form button[type="submit"]:hover {
-  background-color: #218838;
+    background-color: #218838;
 }
 
 
 .profImage img{
-   max-width: 430px;
-   width: 100%;
-   object-fit: cover;
-   border-radius: 5px;
+    max-width: 430px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
 }
 
 .skills {
@@ -366,7 +366,7 @@ form button[type="submit"]:hover {
 .service-item {
     background-color: #fafafa;
     border-radius: 5px;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 4px #00000055;
     position: relative;
     overflow: hidden;
     cursor: pointer;
@@ -499,4 +499,124 @@ form button[type="submit"]:hover {
 
 .dot.active {
     background-color: #c90a3a;
+}
+
+
+/* Cat */
+.recent-projects {
+    max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+}
+
+
+/* Sidebar */
+.projects-container {
+    display: flex;
+    justify-content: center;
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
+    gap: 25px;
+ 
+}
+
+
+.recent-projects h2 {
+    font-family: 'Glacial Indifference';
+    font-size: 70px;
+    font-weight: 800;
+    color: #2E2E2E;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.sidebar {
+    max-width: 200px;
+    width: 100%;
+    height: 100%;
+    background-color: #15263E;
+    color: #FFFFFF;
+    padding: 10px;
+    box-shadow: 0 4px 12px #0000000D;
+}
+
+.categories {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.categories li {
+    font-family: 'Glacial Indifference', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 10px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background 0.2s ease;
+}
+
+.categories li:hover,
+.categories li.active {
+    color:#E93656;
+}
+
+/* cards */
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 10px;
+    flex: 1;   
+}
+
+.project-card {
+    max-width: 450px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 4px 12px #00000010;
+}
+
+.project-image {
+    position: relative;
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    
+}
+
+.project-image img {
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.project-image .overlay {
+    max-width: 450px;
+    width: 100%;
+    position: absolute;
+    inset: 0;
+    background-color: #00000099;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.project-card:hover .overlay {
+    opacity: 1;
+}
+
+.project-card:hover img {
+    transform: scale(1.1);
 }
