--- a/src/style.css
+++ b/src/style.css
@@ -620,3 +620,88 @@ form button[type="submit"]:hover {
 .project-card:hover img {
     transform: scale(1.1);
 }
+
+/* articles */
+.latest-articles {
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto;
+}
+.latest-articles h2 {
+    font-family: 'Glacial Indifference';
+    font-size: 70px;
+    font-weight: 800;
+    color: #2E2E2E;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.articles-container {
+    display: flex;
+    justify-content: right;
+    
+}
+.article-float {
+    display: flex;
+    justify-content: left;
+    flex-direction: row-reverse;
+}
+.article-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 725px;
+    min-height: 560px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    padding: 15px;
+    background-color: #fafafa;
+
+}
+.article-container h3 {
+    font-family: 'Glacial Indifference';
+    font-size: 30px;
+    font-weight: 700;
+    color: #2E2E2E;
+    margin-top: 20px;
+}
+.article-container p {
+    font-family: 'Muli';
+    font-size: 16px;
+    color: #555555;
+    margin-top: 10px;
+}
+.year {
+    background-color: #15263E;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    max-width: 120px;
+    width: 100%;
+}
+.year span{
+    font-family: 'Glacial Indifference';
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    color: #E93656;
+    transform: rotate(180deg);
+    writing-mode: vertical-rl;
+
+
+}
+.article-image {
+    max-width: 700px;
+    width: 100%;
+    height: 560px;
+    object-fit: cover;
+}
+.article-image img {
+    max-width: 700px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
