--- a/src/style.css
+++ b/src/style.css
@@ -705,3 +705,186 @@ form button[type="submit"]:hover {
     height: 100%;
     object-fit: cover;
 }
+/* partners */
+.partners {
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+    flex-direction: column;
+}
+.partners h2 {
+    font-family: 'Glacial Indifference';
+    font-size: 70px;
+    font-weight: 800;
+    color: #2E2E2E;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.partners-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+.partner-logo {
+    width: 150px;
+    height: 150px;
+    perspective: 1000px;
+}
+
+.flip-card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+}
+
+.flip-card-front {
+    background: #fff;
+}
+
+.flip-card-back {
+    background: #f8f8f8;
+    transform: rotateY(180deg);
+}
+/* footer */
+.footer-container {
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../images/map.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.footer-container h3 {
+    font-family: 'Glacial Indifference';
+    font-size: 45px;
+    font-weight: 800;
+    color: #2E2E2E;
+    margin: 50px auto;
+    text-align: center;
+}
+.messageoform {
+    max-width: 890px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    background-color: #ffffff5c;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px #00000010;
+    margin-bottom: 30px;
+}
+.messageoform input {
+    max-width: 280px;
+    width: 100%;
+    padding: 20px;
+    font-size: 14px;
+    border: none;
+    border-radius: 2px;
+    box-sizing: border-box;
+}
+.messageoform textarea {
+    max-width: 890px;
+    width: 100%;
+    padding: 20px;
+    font-size: 14px;
+    border: none;
+    border-radius: 5px;
+    box-sizing: border-box;
+    resize: none;
+    height: auto;
+}
+.messageoform input::placeholder,
+.messageoform textarea::placeholder {
+    color: #515151;
+    font-family: 'Poppins';
+    font-size: 10px;
+    font-weight: 600;
+}
+#contactForm button {
+    padding: 10px 20px;
+    background-color: transparent;
+    color: #E93656;
+    border: 2px solid #E93656;
+    font-weight: bold;
+    cursor: pointer;
+    margin: 20px auto;
+    display: block;
+    
+}
+#contactForm button:hover {
+    background-color: #b2191990;
+    color: #fff;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    inset: 0;
+    background: #00000099;
+    justify-content: center;
+    align-items: center;
+    width: 100%; 
+    height: 100%;
+
+}
+
+.modal-content {
+    background: #fff;
+    padding: 30px 40px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+
+/* media */
+
+/* Smart phones */
+@media (max-width: 599px) {
+    
+
+/* Tablets  */
+@media (min-width: 600px) and (max-width: 1023px) {
+    
+
+/* Small Laptops  */
+@media (min-width: 1024px) and (max-width: 1279px) {
+    
+
+/* Desktops (1280px and up) */
+@media (min-width: 1280px) {
+    
+/* Orientation Based Queries */
+@media (orientation: landscape) {
