--- a/src/style.css
+++ b/src/style.css
@@ -1055,7 +1055,7 @@ form button[type="submit"]:hover {
 
 
 
-/* ===== Smartphones: 490px to 767px ===== */
+/* Smartphones: 490px to 767px */
 @media (min-width: 490px) and (max-width: 767px) {
   .banner-content {
     flex-direction: column;
@@ -1121,15 +1121,30 @@ form button[type="submit"]:hover {
 }
 
 
-/* ===== Small Phones: Below 490px ===== */
+/*  Small Phones: Below 490px */
 @media (max-width: 489px) {
   .banner-content {
     flex-direction: column;
     align-items: center;
   }
+  .header h3 {
+    font-size: 20px;
+  }
+  .roca {
+    font-size: 24px;
+  }
+  .buttons {
+    top: 25%;
+  }
+  
 
   .info-content {
     text-align: center;
+  }
+  .icn-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
   }
 
   .info-content h4 {
@@ -1151,22 +1166,60 @@ form button[type="submit"]:hover {
     width: 100%;
     height: 200px;
   }
-
+  .detail-info {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px auto;
+  }
+  .hireMeModal {
+    max-width: 100%;
+    width: 100%;
+  }
+  .aboutMe {
+    text-align: center;
+    align-items: center;
+    max-width: 100%;
+  }
+  .skills {
+    max-width: 100%;
+    padding: 0 40px;
+  }
   .article-image {
     height: 300px;
   }
+  .contact-info-cont {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  .sec-info-cont h4 {
+    width: 100%;
+    margin: 0 auto;
+  }
 
   .serv-grid {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    padding: 15px;
   }
 
   .service-item {
     justify-content: center;
-    max-width: 100%;
   }
-
+ .review-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  #review-text {
+    text-align: center;
+  }
+  #review-name {
+    text-align: center;
+    font-size: 20px;
+  }
   .review, .profile {
     flex-direction: column;
     align-items: center;
@@ -1174,6 +1227,10 @@ form button[type="submit"]:hover {
 
   .info, .dots, .projects-container {
     text-align: center;
+    justify-content: center;
+  }
+  .dots {
+    flex-direction: row;
     justify-content: center;
   }
 
